Atualizaçao de cores e Tipo para Descriçao

--- a/agendamentodisparo.html
+++ b/agendamentodisparo.html
@@ -10,12 +10,12 @@
 <body>
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-12 col-md-8 col-lg-6 form-container">
+        <div class="col-12 col-md-8 col-lg-6 form-container shadow-lg">
           <h1 class="text-center form-title">Agendamento de Disparo</h1>
           <form>
             <div class="mb-3">
               <label for="lista" class="form-label">Nome da Lista:</label>
-              <select id="lista" class="form-select">
+              <select id="lista" class="form-select form-control">
                 <option value="1">Lista A</option>
                 <option value="2">Lista B</option>
                 <option value="3">Lista C</option>
