--- a/tela-upload.html
+++ b/tela-upload.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container px-4"> <!-- Adicionada classe px-4 -->
         <div class="col-md-6 mx-auto">
-            <div class="card my-2">
+            <div class="card my-2 shadow-lg">
                 <div class="card-body text-center"> <!-- Adicionada classe text-center -->
                     <h2 class="card-title">Baixe o Arquivo de Referência abaixo:</h2>
                     <a href="caminho/para/arquivo.extensao" download class="btn btn-primary">Download</a>
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="col-md-6 mx-auto text-center">
-            <div class="card my-2">
+            <div class="card my-2 shadow-lg">
                 <div class="card-body">
                     <h2 class="card-title">Upload de Arquivo</h2>
                     <p class=" mb-3">Arraste e solte o arquivo aqui ou</p> <!-- Adicionada classe text-center e mb-3 -->
