--- a/editarDados.html
+++ b/editarDados.html
@@ -5,23 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Editar Dados</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   <link rel="stylesheet" href="editarDados.css">
 </head>
 <body>
-  <div class="container">
-    <h1 class="text-center">Editar Dados</h1>
-    <form id="edit-form">
-      <div class="mb-3">
-        <label for="nome" class="form-label">Nome:</label>
-        <input type="text" id="nome" class="form-control">
+  <div class="form-container row justify-content-center shadow-lg">
+    <h1 class="text-center form-title">Editar dados</h1>
+    <form id="editar-dados">
+      <div class="form-group mb-3">
+        <label for="nome">Nome da lista</label>
+        <input type="text" id="nomelista" class="form-control" required>
       </div>
-      <div class="mb-3">
-        <label for="tipo" class="form-label">Tipo:</label>
-        <input type="text" id="tipo" class="form-control">
+      <div class="form-group mb-3">
+        <label for="nome">Descrição</label>
+        <input type="text" id="descricao" class="form-control" required>
       </div>
-      <button type="submit" class="btn btn-primary">Salvar</button>
+      <div class="button-container mb-3">
+        <button type="submit" class="btn btn-primary btn-submit">Salvar Alterações</button>
+        <button type="submit" class="btn btn-secondary btn-cancel">Fechar</button>
+      </div>
     </form>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="editarDados.js"></script>
 </body>
 </html>
