--- a/tela_cadastros.html
+++ b/tela_cadastros.html
@@ -10,48 +10,48 @@
 <body>
     <div class="form-container row justify-content-center shadow-lg">
       <h1 class="text-center form-title">Cadastro de Cliente</h1>
-      <form id="cadastro-form">
-        <div class="form-group mb-3">
+      <form id="cadastro-form" class="row g-3">
+        <div class="form-group mb-3 col-md-6">
           <label for="nome">Nome:</label>
           <input type="text" id="nome" class="form-control" required>
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 col-md-6">
           <label for="email">Email:</label>
           <input type="email" id="email" class="form-control" required>
         </div>
-        <div class="form-group mb-3">
-          <label for="telefone">Telefone:</label>
-          <input type="tel" id="telefone" class="form-control" required>
-        </div>
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 col-md-6">
           <label for="cpf">CPF:</label>
           <input type="text" id="cpf" class="form-control" required>
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 col-md-6">
           <label for="rg">RG:</label>
           <input type="text" id="rg" class="form-control" required>
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 col-md-6">
           <label for="data-nascimento">Data de Nascimento:</label>
           <input type="date" id="data-nascimento" class="form-control" required>
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 col-md-6">
+          <label for="telefone">Telefone:</label>
+          <input type="tel" id="telefone" class="form-control" required>
+        </div>
+        <div class="form-group mb-3 col-md-5">
           <label for="cep">CEP:</label>
           <input type="text" id="cep" class="form-control" required onblur="pesquisacep(this.value);">
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 col-md-7">
           <label for="rua">Rua:</label>
           <input type="text" id="rua" class="form-control" readonly>
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 col-md-6">
           <label for="bairro">Bairro:</label>
           <input type="text" id="bairro" class="form-control" readonly>
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 col-md-4">
           <label for="cidade">Cidade:</label>
           <input type="text" id="cidade" class="form-control" readonly>
         </div>
-        <div class="form-group mb-3">
+        <div class="form-group mb-3 col-md-2">
           <label for="uf">Estado:</label>
           <input type="text" id="uf" class="form-control" readonly>
         </div>
